Wire up code to OpenAPI
