# docs/openapi/jellyBeansApi.yaml
@@ -22,7 +22,7 @@ paths:
   /jellybeans:
     get:
       operationId: getJellyBeansList
-      summary: Get a list delicious Jelly Beans.
+      summary: Get a list of delicious Jelly Beans.
       description: |
         Get all the Jelly Beans out there. Yummy! :)
       tags:
@@ -58,19 +58,30 @@ paths:
                 description: JSON representation of a list of Jelly Beans.
                 type: object
                 properties:
-                  id:
-                    type: string
-                    description: The unique ID (UUID) of this Jelly Bean.
-                    example: cf988dc2-831c-471a-bc98-33cc6711724d
-                  color:
-                    type: string
-                    description: The available Jelly Bean colors.
-                    example: yellow
-                    enum:
-                      - red
-                      - green
-                      - blue
-                      - yellow
-                      - orange
-                      - purple
-                      - rainbow
+                  jelly_beans:
+                    type: array
+                    items:
+                      description: JSON representation of a Jelly Bean.
+                      type: object
+                      properties:
+                        id:
+                          type: string
+                          description: The unique ID (UUID) of this Jelly Bean.
+                          example: cf988dc2-831c-471a-bc98-33cc6711724d
+                        color:
+                          type: string
+                          description: The available Jelly Bean colors.
+                          example: yellow
+                          enum:
+                            - red
+                            - green
+                            - blue
+                            - yellow
+                            - orange
+                            - purple
+                            - rainbow
+                      required:
+                        - id
+                        - color
+                required:
+                  - jelly_beans
