# src/domain/jellyBeans.model.ts
@@ -1,0 +1,6 @@
+export type JellyBeanColor = 'red' | 'green' | 'blue' | 'yellow' | 'orange' | 'purple' | 'rainbow';
+
+export interface IJellyBean {
+  id: string;
+  color: JellyBeanColor;
+}
